<resources>
    <string name="app_name">UniJoystiCle Controller</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="title_activity_settings">Settings</string>
    <string name="appVersion">v0.4.12</string>

    <!-- Strings related to Settings -->

    <!-- Categories -->
    <string name="pref_title_cat_server">WiFi device</string>
    <string name="pref_title_cat_unijoysticle">UniJoystiCle mode</string>
    <string name="pref_title_cat_dpad">Dpad mode + Game controller</string>
    <string name="pref_title_cat_gyruss">Gyruss mode</string>

    <string name="pref_title_server_name">Device address</string>
    <string name="pref_summary_server">%s</string>

    <string name="pref_title_rotation_rate">Rotation rate</string>
    <string name="pref_title_jump_threshold">Jump threshold</string>
    <string name="pref_title_movement_threshold">Movement threshold</string>

    <string name="title_enableButtonB">Use button B to jump</string>
    <string name="title_swapButtonsAB">Swap buttons A and B</string>

    <!-- Gyruss Gravity SeekBar -->
    <string name="pref_summary_gravity">%s</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_dialog_message">Here comes a message</string>
    <string name="settings_unit">Km</string>
    <string name="pref_title_gravity_factor">Gravity factor</string>


    <!-- pref default values -->
    <string name="default_serverAddress">unijoysticle.local</string>
    <string name="default_enableButtonB">false</string>
    <string name="default_swapButtonsAB">false</string>

    <string name="prefs_server_stats">Device stats &amp; settings</string>

    <string name="slider_jumpThresholdMessage">Threshold to trigger the "fire" button</string>
    <string name="slider_movementThresholdMessage">Threshold to trigger the Up/Down/Left/Right buttons</string>
    <string name="slider_rotationRatioMessage">Ratio between a wheel rotation and a joystick "rotation"</string>

    <!-- ActionBar Titles -->
    <string name="action_bar_title_dpad">Dpad mode</string>
    <string name="action_bar_title_home">Commodore Home mode</string>
    <string name="action_bar_title_unijoysticle">UniJoystiCle mode</string>
    <string name="action_bar_title_commando">Commando mode</string>

    <!-- Misc -->
    <string name="ok">OK</string>
    <string name="error_dialog_title">Could not resolve:</string>
    <string name="error_dialog_message">Make sure that the UniJoystiCle WiFi device is On</string>
    <string name="unijoysticle">UniJoystiCle</string>
    <string name="dpad">Dpad</string>
    <string name="commando">Commando</string>
    <string name="c_home">C= Home</string>
    <string name="joystick1">Joystick #1</string>
    <string name="joystick2">Joystick #2</string>
    <string name="zero">0</string>

    <!-- Home Activity -->
    <string name="composeButtonLabel">Hello</string>
    <string name="checkboxesLabel">Music</string>
    <string name="jetpackCheckboxLabel">Checkbox 1</string>
    <string name="hyperspaceCheckboxLabel">Checkbox 2</string>
    <string name="imagesAndTextLabel">Dimmer</string>
    <string name="button_play">Play</string>
    <string name="button_stop">Stop</string>
    <string name="assistant">Personal Assistant</string>
    <string name="activated">Activated:</string>
    <string name="alarm">Alarm</string>
    <string name="hey_commodore">Hey Commodore</string>
    <string name="number_hint">0</string>
    <string name="advanced">Advanced</string>
    <string name="joy_1">Joy #1</string>
    <string name="joy_2">Joy #2</string>
    <string name="textview">TextView</string>
    <string name="off">Off</string>

    <!-- Spinner -->
    <string-array name="songs">
        <item>Ashes to ashes</item>
        <item>The final countdown</item>
        <item>Pop goes the world</item>
        <item>Jump</item>
        <item>Enola gay</item>
        <item>Billie Jean</item>
        <item>Another day in paradise</item>
        <item>Wind of change</item>
        <item>Take my breath away</item>
    </string-array>
</resources>
