<!--
Copyright (C) 2013 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        >

        <!-- Notice the presence of nextFocusDown/nextFocusUp on the elements below. You can
        also use nextFocusLeft/nextFocusRight. This tells the system in what order elements
        should be navigated through. If not present, the system will make a guess based on
        element location in the layout. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:id="@+id/buttonsLabel"
            android:layout_alignParentTop="true"
            android:nextFocusDown="@+id/composeButton"/>

        <Switch
            android:text="@string/activated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_alarm"
            android:layout_below="@+id/buttonsLabel"
            android:nextFocusUp="@+id/editText_assistant"
            android:nextFocusDown="@+id/spinner_songs"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkboxesLabel"
            android:id="@+id/checkboxesLabel"
            android:layout_below="@+id/switch_alarm"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="122dp"
            android:layout_marginBottom="19dp"
            android:id="@+id/spinner_songs"
            android:layout_below="@+id/checkboxesLabel"
            android:nextFocusUp="@+id/switch_alarm"
            android:nextFocusDown="@+id/button_play"
            android:layout_marginRight="122dp" />

        <Button
            android:text="@string/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_play"
            android:layout_below="@+id/spinner_songs"
            android:nextFocusUp="@+id/spinner_songs"
            android:nextFocusDown="@+id/button_stop"
            />

        <Button
            android:text="@string/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_stop"
            android:layout_below="@+id/spinner_songs"
            android:layout_alignEnd="@+id/spinner_songs"
            android:layout_marginEnd="21dp"
            android:nextFocusUp="@+id/spinner_play"
            android:nextFocusDown="@+id/seekBar_dimmer"
            android:layout_marginRight="21dp"
            android:layout_alignRight="@+id/spinner_songs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imagesAndTextLabel"
            android:id="@+id/imagesAndTextLabel"
            android:layout_below="@+id/button_play"
            android:layout_marginTop="20dp"
            />

        <SeekBar
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:progress="0"
            android:layout_below="@+id/imagesAndTextLabel"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:id="@+id/seekBar_dimmer"
            android:nextFocusUp="@+id/button_stop"
            android:nextFocusDown="@+id/editText_assistant"
            android:layout_alignParentLeft="true" />

        <TextView
            android:text="@string/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar_dimmer"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView_dimmer" />

    </RelativeLayout>
</ScrollView>
